--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Developer Portfolio</title>
+  <title>Tiago Morais Morgado - Developer Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
     body {
@@ -31,11 +31,11 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 text-center text-md-start">
-          <h1 class="display-4">Hi, I'm Your Name</h1>
+          <h1 class="display-4">Hi, I'm Tiago Morais Morgado</h1>
           <p class="lead">I'm a passionate developer building innovative projects. Explore my work on GitHub and check out my blog for insights and tutorials.</p>
           <div class="my-4">
-            <a href="https://github.com/your-username" target="_blank" class="btn btn-light btn-lg me-3 github-card">View My GitHub</a>
-            <a href="https://your-blog-url.com" target="_blank" class="btn btn-outline-light btn-lg">Read My Blog</a>
+            <a href="https://github.com/tmm88" target="_blank" class="btn btn-light btn-lg me-3 github-card">View My GitHub</a>
+            <a href="https://tiagomoraismorgadodiaryreports.blogspot.com" target="_blank" class="btn btn-outline-light btn-lg">Read My Blog</a>
           </div>
         </div>
         <div class="col-md-6 text-center">
