--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <p class="lead">I'm a passionate developer building innovative projects. Explore my work on GitHub and check out my blog for insights and tutorials.</p>
           <div class="my-4">
             <a href="https://github.com/tmm88" target="_blank" class="btn btn-light btn-lg me-3 github-card">View My GitHub</a>
-            <a href="https://tiagomoraismorgadodiaryreports.blogspot.com" target="_blank" class="btn btn-outline-light btn-lg">Read My Blog</a>
+            <a href="https://medium.com/@tiagomoraismorgado" target="_blank" class="btn btn-outline-light btn-lg">Read My Blog</a>
           </div>
         </div>
         <div class="col-md-6 text-center">
